--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Patrick Chan <patrickchan1999@gmail.com>"]
 
 [dependencies]
+dirs = "1.0"
 filters = { git = "https://github.com/torch-rs/filters" }
 searchers = { git = "https://github.com/torch-rs/searchers" }
