--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["Patrick Chan <patrickchan1999@gmail.com>"]
 [dependencies]
 dirs = "1.0"
 filters = { git = "https://github.com/torch-rs/filters" }
+open = "1.2.1"
 searchers = { git = "https://github.com/torch-rs/searchers" }
