Add Inflector dependency, for titlecasing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Patrick Chan <patrickchan1999@gmail.com>"]
 [dependencies]
 dirs = "1.0"
 filters = { git = "https://github.com/torch-rs/filters" }
+Inflector = "*"
 open = "1.2.1"
 searchers = { git = "https://github.com/torch-rs/searchers" }
 sorters = { git = "https://github.com/torch-rs/sorters" }
