--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ dirs = "1.0"
 filters = { git = "https://github.com/torch-rs/filters" }
 Inflector = "*"
 open = "1.2.1"
+raise_window = { git = "https://github.com/torch-rs/raise_window" }
 searchers = { git = "https://github.com/torch-rs/searchers" }
 sorters = { git = "https://github.com/torch-rs/sorters" }
